*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_options.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_options.htm
@@ -12,23 +12,23 @@
 <H2>
 Manipulating JDT/Core options</H2>
 <P>
-The JDT/Core options are accessible from a few number of API.
-All these API are located in <a href="../reference/api/org/eclipse/jdt/core/JavaCore.html">JavaCore</a> class.
-Only four methods are necessary to manipulated options:
+JDT Core options are accessible from a few APIs.
+All of these APIs are located in <a href="../reference/api/org/eclipse/jdt/core/JavaCore.html">JavaCore</a>.
+Only four methods are necessary to manipulate the options:
 <ul>
-<li><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#getDefaultOptions()">JavaCore.getDefaultOptions()</a> - Answer the default value of options.</li>
+<li><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#getDefaultOptions()">JavaCore.getDefaultOptions()</a> - Answer the default value of the options.</li>
 <li><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#getOption(java.lang.String)">JavaCore.getOption()</a> - Answer the value of a specific option.</li>
-<li><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#getOptions()">JavaCore.getOptions()</a> - Answer the current values of options.</li>
+<li><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#getOptions()">JavaCore.getOptions()</a> - Answer the current values of the options.</li>
 <li><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#setOptions(java.util.Hashtable)">JavaCore.setOptions()</a> - Replace the options values by new values.</li>
 </ul>
 </P>
 
 <P>
 The options are manipulated as a hashtable of all known configurable options with their values.
-Helper constants have been defined on <a href="../reference/api/org/eclipse/jdt/core/JavaCore.html">JavaCore</a> for each of the option ID and their possible constant values.</P>
+Helper constants have been defined on <a href="../reference/api/org/eclipse/jdt/core/JavaCore.html">JavaCore</a> for each option ID and its possible constant values.</P>
 
 <P>
-If you want to configure JDT/Core with only your options, the code must be like the following example.
+If you want to configure JDT Core with only your options, the following code fragment would work:
 <font color='#4444CC'><pre>
    // Get the current options
    Hashtable options = JavaCore.getDefaultOptions();
@@ -40,7 +40,7 @@ If you want to configure JDT/Core with only your options, the code must be like 
    JavaCore.setOptions(options);
 </pre></font>
 
-If you want to keep the current options and modify only one of them, you need to do like the second example.
+If you want to keep the current options and modify only one of them:
 
 <font color='#4444CC'><pre>
    // Get the current options
@@ -53,10 +53,11 @@ If you want to keep the current options and modify only one of them, you need to
    JavaCore.setOptions(options);
 </pre></font></P>
 
-<H3>JDT/Core options descriptions</h3>
+<H3>JDT Core options descriptions</h3>
 
 <P>
-The list of all the JDT/Core options are in the following tables. All the the tables have the same organisation with the option id surrounded with parenthesis and the default value printed in bold italics style.
+The list of all the JDT Core options are in the following tables. All of the tables have the same
+organisation with the option id surrounded with parenthesis and the default value printed in bold italics.
 <br>
 <br>
 <table BORDER CELLSPACING=2 CELLPADDING=2 COLS=2 WIDTH="100%" >
@@ -104,7 +105,7 @@ The list of all the JDT/Core options are in the following tables. All the the ta
 <td colspan=2><b>Generating Local Variable Debug Attribute</b> (<a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#COMPILER_LOCAL_VARIABLE_ATTR">COMPILER_LOCAL_VARIABLE_ATTR</a>)</td>
 </tr>
 <tr valign="top">
-<td rowspan=2>When generated, this attribute will enable local variable names to be displayed in debugger, only in place where variables are definitely assigned (.class file is then bigger)</td>
+<td rowspan=2>When generated, this attribute will enable local variable names to be displayed in the debugger, only in places where variables are definitely assigned (.class file is then bigger)</td>
 <td><i><b><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#GENERATE">GENERATE</a></b></i></b></td>
 </tr>
 <tr valign="top">
@@ -115,7 +116,7 @@ The list of all the JDT/Core options are in the following tables. All the the ta
 <td colspan=2><b>Generating Line Number Debug Attribute</b>  (<a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#COMPILER_LINE_NUMBER_ATTR">COMPILER_LINE_NUMBER_ATTR</a>)</td>
 </tr>
 <tr valign="top">
-<td rowspan=2>When generated, this attribute will enable source code highlighting in debugger (.class file is then bigger).</td>
+<td rowspan=2>When generated, this attribute will enable source code highlighting in the debugger (.class file is then bigger).</td>
 <td><b><i><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#GENERATE">GENERATE</a></i></b></td>
 </tr>
 <tr valign="top">
@@ -148,7 +149,8 @@ The list of all the JDT/Core options are in the following tables. All the the ta
 <td colspan=2><b>Defining Target Java Platform</b>   (<a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#COMPILER_CODEGEN_TARGET_PLATFORM">COMPILER_CODEGEN_TARGET_PLATFORM</a>)</td>
 </tr>
 <tr valign="top">
-<td rowspan=4>For binary compatibility reason, .class files can be tagged to with certain VM versions and later. Note that "1.4" target require to toggle compliance mode to "1.4" too.</td>
+<td rowspan=4>For binary compatibility reason, .class files can be tagged with certain VM versions and later.
+Note that the "1.4" target requires you to toggle the compliance mode to "1.4" also.</td>
 <td><b><i><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#VERSION_1_1">VERSION_1_1</a></i></b></td>
 </tr>
 <tr valign="top">
@@ -165,7 +167,8 @@ The list of all the JDT/Core options are in the following tables. All the the ta
 <td colspan=2><b>Reporting Unreachable Code</b>   (<a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#COMPILER_PB_UNREACHABLE_CODE">COMPILER_PB_UNREACHABLE_CODE</a>)</td>
 </tr>
 <tr valign="top">
-<td rowspan=3>Unreachable code can optionally be reported as an error, warning or simply ignored. The bytecode generation will always optimized it out.</td>
+<td rowspan=3>Unreachable code can optionally be reported as an error, warning or simply ignored.
+The bytecode generation will always optimize it out.</td>
 <td><b><i><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#ERROR">ERROR</a></i></b></td>
 </tr>
 <tr valign="top">
@@ -235,7 +238,7 @@ The list of all the JDT/Core options are in the following tables. All the the ta
 <td colspan=2><b>Reporting Hidden Catch Block</b>   (<a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#COMPILER_PB_HIDDEN_CATCH_BLOCK">COMPILER_PB_HIDDEN_CATCH_BLOCK</a>)</td>
 </tr>
 <tr valign="top">
-<td rowspan=3>Locally to a try statement, some catch blocks may hide others , e.g.
+<td rowspan=3>Local to a try statement, some catch blocks may hide others , e.g.
 <pre>
    try {
       throw new java.io.CharConversionException();
@@ -382,7 +385,7 @@ When enabling this option, the compiler will issue an error or a warning for hid
 <td colspan=2><b>Specifying Filters for Resource Copying Control</b>   (<a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#CORE_JAVA_BUILD_RESOURCE_COPY_FILTER">CORE_JAVA_BUILD_RESOURCE_COPY_FILTER</a>)</td>
 </tr>
 <tr valign="top">
-<td rowspan=1>Allow to specify some filters to control the resource copy process. (&lt;name&gt; is a file name pattern (only * wild-cards allowed) or the name of a folder which ends with '/')</td>
+<td rowspan=1>Specify filters to control the resource copy process. (&lt;name&gt; is a file name pattern (only * wild-cards allowed) or the name of a folder which ends with '/')</td>
 <td>{&lt;name&gt;[,&lt;name&gt;]*}.<br><b><i>Default value is ""</i></b></td>
 </tr>
 </tr>
@@ -391,7 +394,7 @@ When enabling this option, the compiler will issue an error or a warning for hid
 <td colspan=2><b>Abort if Invalid Classpath</b>   (<a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#CORE_JAVA_BUILD_INVALID_CLASSPATH">CORE_JAVA_BUILD_INVALID_CLASSPATH</a>)</td>
 </tr>
 <tr valign="top">
-<td rowspan=2>Allow to toggle the builder to abort if the classpath is invalid</td>
+<td rowspan=2>Instruct the builder to abort if the classpath is invalid</td>
 <td><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#ABORT">ABORT</a></td>
 </tr>
 <tr valign="top">
