Changed tod to Fred

--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync3_rel.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync3_rel.htm
@@ -52,12 +52,12 @@
     <TD valign="top" align="left"> 
       <P CLASS="Para"> <b>5.</b> </P>
     </TD>
-    <TD valign="top" align="left"> At this point tod may want to Synchronize 
+    <TD valign="top" align="left"> At this point Fred may want to Synchronize 
       with the repository to catch up to the changes you just committed. </TD>
   </TR>
   </TBODY> 
 </TABLE>
-<P>We have successfully collaborated with tod by making simultaneous changes 
+<P>We have successfully collaborated with Fred by making simultaneous changes 
   to the same project. The Synchronization view&nbsp; and CVS Repository History 
   view allowed us to determine the specific changes each user was making and to 
   quickly stay on top of the ongoing changes being committed into the repository. 
