*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-203.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-203.htm
@@ -42,10 +42,8 @@
     </ul>
   </li>
 </ul>
-<ol>
-  <li><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></li>
-  <li><a href="../concepts/ctemplates.htm">Templates</a></li>
-</ol>
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
+<p> <a href="../concepts/ctemplates.htm">Templates</a> </p>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
 <p> <a href="tasks-171.htm">Using templates</a></p>
 <p><img border=0 width=159 height=27 id="_x0000_i1027"
