*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_codeassist.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_codeassist.htm
@@ -70,7 +70,7 @@ Code completion options
 </h4>
 
 <P>
-The options of code completion can be changed by other plugins. You can modify JDT/Core options to change the completion behavior.</P>
+The options of code completion can be changed by other plugins. You can modify JDT Core options to change the completion behavior.</P>
 <P>There are two options:
 <ul>
 <li>Activate Visibility Sensitive Completion: when active, completion doesn't answer what you can not see (e.g. you can not see private methods of a super class).</li>
@@ -79,7 +79,7 @@ The options of code completion can be changed by other plugins. You can modify J
 </P>
 
 <P>
-To know how to modify JDT/Core options see: <a href="../guide/jdt_api_options.htm"> What are the JDT/Core options?</a></P>
+To know how to modify JDT Core options see: <a href="../guide/jdt_api_options.htm"> What are the JDT Core options?</a></P>
 
 <H3>
 Code selection</h3>
