--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_options.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_options.htm
@@ -4,13 +4,13 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<TITLE>Manipulating JDT/Core options</TITLE>
+<TITLE>Manipulating JDT Core options</TITLE>
 
 <link rel="stylesheet" type="text/css" HREF="../book.css">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H2>
-Manipulating JDT/Core options</H2>
+Manipulating JDT Core options</H2>
 <P>
 JDT Core options are accessible from a few APIs.
 All of these APIs are located in <a href="../reference/api/org/eclipse/jdt/core/JavaCore.html">JavaCore</a>.
