--- a/bundles/org.eclipse.jdt.doc.isv/questions/index.html
+++ b/bundles/org.eclipse.jdt.doc.isv/questions/index.html
@@ -25,7 +25,7 @@ JDT Core</h2>
     Java code?</a></li>
   <li><a href="../guide/jdt_api_search.htm">How do I use the Java search 
     engine?</a></li>
-  <li><a href="../guide/jdt_api_options.htm">What are the JDT/Core options?
+  <li><a href="../guide/jdt_api_options.htm">What are the JDT Core options?
   </a></li>
   <li><a href="../guide/jdt_api_codeassist.htm">How do I programmatically use
     CodeAssist and CodeSelect?</a></li>
