added new tasks

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-2.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-2.htm
@@ -6,8 +6,26 @@
   <meta http-equiv="Content-Style-Type" content="text/css">
 
 
-  <link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css"><title>Showing and hiding files</title></head><body bgcolor="white" lang="EN-US" link="blue" vlink="blue" style="tab-interval:.5in">
-<div class="Section1"><h1>Showing and hiding files</h1><p class="para">You can filter the file display in the Package Explorer.</p><p class="para"><img width="159" height="27" id="_x0000_i1025" src="../images/ngrelc.gif" alt="Related concepts" border="0"></p><p class="para"><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p><p><img border="0" width="159" height="27" id="_x0000_i1026" src="../images/ngrelt.gif" alt="Related tasks"></p><p><a href="tasks-3.htm">Showing and hiding system files</a><br><a href="tasks-4.htm">Showing and hiding CLASS files generated for inner types</a>&nbsp;<br><a href="tasks-5.htm">Showing and hiding libraries</a><br><a href="tasks-6.htm">Showing single elements or whole files</a></p><p><img border="0" width="159" height="27" id="_x0000_i1027" src="../images/ngrelr.gif" alt="Related reference"></p><p><a href="../reference/ref-view-package-explorer.htm">Package Explorer</a></p></div>
+  <link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css"><title>Showing and hiding elements</title></head><body bgcolor="white" lang="EN-US" link="blue" vlink="blue" style="tab-interval:.5in">
+<div class="Section1">
+  <h1>Showing and hiding elements</h1>
+  <p class="para">You can filter the file display in the Package Explorer.</p><p class="para"><img width="159" height="27" id="_x0000_i1025" src="../images/ngrelc.gif" alt="Related concepts" border="0"></p><p class="para"><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
+  <p><img border="0" width="159" height="27" id="_x0000_i1026" src="../images/ngrelt.gif" alt="Related tasks"></p>
+  <p><a href="tasks-3.htm">Showing and hiding system files</a><br>
+  <a href="tasks-4.htm">Showing and hiding CLASS files generated for inner types</a>&nbsp;<br>
+  <a href="tasks-5.htm">Showing and hiding libraries</a><br>
+  <a href="tasks-6.htm">Showing single elements or whole Java files</a><br>
+  <a href="tasks-183.htm">Showing and hiding empty packages</a><br>
+  <a href="tasks-184.htm">Showing and hiding empty parent packages</a><br>
+  <a href="tasks-185.htm">Showing and hiding Java files</a><br>
+  <a href="tasks-186.htm">Showing and hiding non-Java elements</a><br>
+  <a href="tasks-191.htm">Showing and hiding members in Java views</a><br>
+  <a href="tasks-192.htm">Showing and hiding override indicators</a><br>
+  <a href="tasks-193.htm">Showing and hiding method return types in Java views</a><br></p>
+  
+  <p><img border="0" width="159" height="27" id="_x0000_i1027" src="../images/ngrelr.gif" alt="Related reference"></p>
+  <p><a href="../reference/ref-view-package-explorer.htm">Package Explorer</a></p>
+ </div>
 <p><br></p>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
 </body></html>
