--- a/bundles/org.eclipse.platform.doc.user/tasks/running_eclipse.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/running_eclipse.htm
@@ -58,7 +58,18 @@ The general form of running the Eclipse executable is:</p>
 </blockquote>
 
 <TABLE width="90%" border=1 height="543">
+<caption>
+	<b>
+		Eclipse Startup Parameters
+	</b>
+</caption>
   <TBODY>
+    <tr> 
+      <th width="33%"> 
+        <b>Command</b></th>
+      <th width="65%"><b>Description</b></th>
+      <TD width="2%">&nbsp;</TD>
+    </tr>
     <tr> 
       <TD width="33%"> 
         <pre><b>-configuration</b> (<var>configurationFileURL</var> | 
