--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-9c.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-9c.htm
@@ -14,7 +14,7 @@ Working with fast views</H1>
 <p CLASS="Head">If you have converted the Navigator to a fast view it will
 appear in the shortcut bar as shown below.&nbsp;</p>
 <blockquote>
-  <p CLASS="Head"><img align="texttop" border="0" src="../images/Image60_fast_view1.jpg"  alt="Show fast view"></p>
+  <p CLASS="Head"><img align="texttop" border="0" src="../images/Image60_fast_view1.jpg"  alt="Show fast view" width="70" height="168"></p>
 </blockquote>
   <p CLASS="Head">To work with a fast view proceed as follows.</p>
 <TABLE BORDER="0" cellspacing="0" cellpadding="3">
@@ -42,7 +42,7 @@ appear in the shortcut bar as shown below.&nbsp;</p>
 <P CLASS="Para">
 Observe the Navigator view slides out from the shortcut bar.&nbsp; </P>
 <P CLASS="Para">
-<img align="texttop" border="0" src="../images/Image61_nav_fast.jpg"  alt="Fast view"> </P>
+<img align="texttop" border="0" src="../images/Image61_nav_fast.jpg"  alt="Fast view" width="376" height="283"> </P>
 </TD>
 </TR>
 <TR>
@@ -67,7 +67,7 @@ You can use the Navigator fast view as you would normally.&nbsp;&nbsp; </P>
 To hide the fast view simply click off of it or click on the Minimize button on
 the fast view's toolbar </P>
 <P CLASS="Para">
-<img align="texttop" border="0" src="../images/Image61_fast_minimize.jpg"  alt="Minimze button"> </P>
+<img align="texttop" border="0" src="../images/Image61_fast_minimize.jpg"  alt="Minimze button" width="242" height="73"> </P>
 <P CLASS="Para">&nbsp; </P>
 <P CLASS="Para">Note: If you open a file from the Navigator fast view, the fast
 view will automatically hide itself to allow you to work with the
@@ -82,7 +82,7 @@ file.&nbsp;&nbsp; </P>
 
 <ul>
   <li>Click the Restore button on the fast view's toolbar <br>
-    <img align="texttop" border="0" src="../images/Image61_fast_restore.jpg"  alt="Pin button"><br>
+    <img align="texttop" border="0" src="../images/Image61_fast_restore.jpg"  alt="Pin button" width="242" height="73"><br>
   </li>
   <li>Choose Restore from the context menu of the icon in the top left corner of
     the view. </li>
@@ -105,7 +105,7 @@ file.&nbsp;&nbsp; </P>
 </p>
 
 <p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0" width="324" height="14"></a>
 </p>
 
 </BODY>
