--- a/bundles/org.eclipse.platform.doc.user/concepts/cworkset.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/cworkset.htm
@@ -35,7 +35,7 @@ sets and to create new working sets.
 
 <P CLASS="Para" Label=Type>
 &nbsp;
-<img align="texttop" border="0" src="../images/Image87_workset_sel.jpg" alt="Picture of working set selection dialog" >
+<img align="texttop" border="0" src="../images/Image87_workset_sel.jpg" alt="Picture of working set selection dialog" width="281" height="371" >
 </P>
 
 <P CLASS="Para" Label=Type>
@@ -50,7 +50,7 @@ Java working set.
 
 <P CLASS="Para" Label=Type>
 &nbsp;
-<img align="texttop" border="0" src="../images/Image88_workset_new_type.jpg" alt="Picture of type selection page of new working set wizard" >
+<img align="texttop" border="0" src="../images/Image88_workset_new_type.jpg" alt="Picture of type selection page of new working set wizard" width="437" height="430" >
 </P>
 
 <P CLASS="Para" Label=Type>
@@ -66,7 +66,7 @@ editing wizards.
 
 <P CLASS="Para" Label=Type>
 &nbsp;
-<img align="texttop" border="0" src="../images/Image89_workset_new_res.jpg" alt="Picture of edit page of working set wizard" >
+<img align="texttop" border="0" src="../images/Image89_workset_new_res.jpg" alt="Picture of edit page of working set wizard" width="437" height="474" >
 </P>
 
 <P CLASS="Para" Label=Type>
