--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-52d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-52d.htm
@@ -17,7 +17,7 @@ indicate the differences between the files.</p>
 <p CLASS="Head">If you need more room to look at the comparison you can double
 click on the editor tab to maximize the editor.&nbsp;</p>
 <p CLASS="Head">
-<img align="texttop" border="0" src="../images/Image80_compare_editor2.jpg" alt="Compare editor" >&nbsp;&nbsp;</p>
+<img align="texttop" border="0" src="../images/Image80_compare_editor2.jpg" alt="Compare editor" width="526" height="178" >&nbsp;&nbsp;</p>
 <p CLASS="Head">
 Looking at the numbered changes let's work our way down the left side of the
 difference editor.</p>
