Bug 17714 Help pages don't include fast view drang and drop

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-9c.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-9c.htm
@@ -86,6 +86,10 @@ file.&nbsp;&nbsp; </P>
   </li>
   <li>Choose Restore from the context menu of the icon in the top left corner of
     the view. </li>
+  <li>Drag the fast view's title bar (or close the fast view and then drag its
+    button from the shortcut bar) and drop it on the workbench like a normal
+    view.&nbsp; </li>
+
 </ul>
 
 
