*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-18.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-18.htm
@@ -9,8 +9,7 @@
 <div class=Section1> 
   <h1>Creating a top-level class</h1>
   <p class=para>You can create classes that are not enclosed in other types. </p>
-  <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> Open the New Class wizard.</p>
+  <p class=para> Open the New Class wizard.</p>
   <p class=para> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span> Edit the <span class=label><b>Source Folder</b></span> field as needed 
     to indicate in which folder you want the new class to reside. You can either 
