--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-194.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-194.htm
@@ -27,6 +27,9 @@
     original package name. For example, using a pattern <b>3~.</b> on a package 
     named <b>org.eclipse.jdt</b> results in <b>org.ecl~.jdt</b></li>
 </ul>
-<p>&nbsp;</p>
-<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+<p><a href="../reference/ref-preferences-appearance.htm">Java 
+  Appearance preference page</a></p>
+  <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
 </body></html>
