--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-195.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-195.htm
@@ -9,11 +9,11 @@
   </head>
 <body bgcolor="#ffffff">
 <h1 class="Head">Sorting elements in Java views</h1>
-<p>Members and Outline views can present members in a sorted view or in the order 
-  of declaration in compilation unit.</p>
+<p>Members and Outline views can present members sorted or in the order of declaration 
+  in compilation unit.</p>
 <p>To sort members:</p>
 <ul>
-  <li>Toggle on the Sort toolbar button in the Java view </li>
+  <li>Toggle on the <b>Sort</b> toolbar button in the Java view </li>
 </ul>
 <p><b>Note:</b> the sorting order is defined as follows:</p>
 <ul>
@@ -25,7 +25,7 @@
 <p>&nbsp;</p>
 <p>To present members in the order of declaration in compilation unit.</p>
 <ul>
-  <li>Toggle off the Sort toolbar button in the Java view </li>
+  <li>Toggle off the <b>Sort</b> toolbar button in the Java view </li>
 </ul>
 <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
 </body></html>
