--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-45.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-45.htm
@@ -8,11 +8,10 @@
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Using the Packages View</H1>
+<H1 CLASS="Head"> Using the Package Explorer</H1>
 <P>&nbsp;<br>
 
-<img src = ../ngibmcpy.gif width="195" height="12">
+<img src = ../ngibmcpy.gif border=0>
 
 </P>
 
