--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-5.htm
@@ -30,8 +30,9 @@ menu.</li>
 </ol>
 
 <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1025" height=27 width=159>
-<p><a href="tasks-2.htm">Showing and hiding files</a>
-<p><img SRC="../images/ngrelr.gif" ALT="Related reference" BORDER=0 id="_x0000_i1026" height=27 width=159>
+  <p><a href="tasks-2.htm">Showing and hiding elements</a><br>
+    <a href="tasks-47.htm">Filtering elements</a>
+  <p><img SRC="../images/ngrelr.gif" ALT="Related reference" BORDER=0 id="_x0000_i1026" height=27 width=159>
 <p><a href="../reference/ref-view-package-explorer.htm">Package Explorer</a>
 <br>&nbsp;
 <p><img SRC="../images/ngibmcpy.gif" BORDER=0 id="_x0000_i1027" height=12 width=195></div>
