--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-186.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-186.htm
@@ -21,6 +21,13 @@
     menu.</li>
   <li> Select the <b>Hide non-Java elements</b> checkbox.</li>
 </ol>
+<p class=para><img width=159 height=27 id="_x0000_i1025"
+src="../images/ngrelt.gif" alt="Related tasks" border=0></p>
+<p class=para><a href="tasks-2.htm">Showing and hiding elements</a><br>
+  <a href="tasks-47.htm">Filtering elements</a> </p>
+<p class=para><img border=0 width=159 height=27 id="_x0000_i1026"
+src="../images/ngrelr.gif" alt="Related reference"></p>
+<p class=para><a href="../reference/ref-view-package-explorer.htm">Package Explorer</a></p>
 <p><br>
 </p>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
