--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-2.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-2.htm
@@ -11,7 +11,8 @@
   <h1>Showing and hiding elements</h1>
   <p class="para">You can filter the file display in the Package Explorer.</p><p class="para"><img width="159" height="27" id="_x0000_i1025" src="../images/ngrelc.gif" alt="Related concepts" border="0"></p><p class="para"><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
   <p><img border="0" width="159" height="27" id="_x0000_i1026" src="../images/ngrelt.gif" alt="Related tasks"></p>
-  <p><a href="tasks-3.htm">Showing and hiding system files</a><br>
+  <p>
+  <a href="tasks-3.htm">Showing and hiding system files</a><br>
   <a href="tasks-4.htm">Showing and hiding CLASS files generated for inner types</a>&nbsp;<br>
   <a href="tasks-5.htm">Showing and hiding libraries</a><br>
   <a href="tasks-6.htm">Showing single elements or whole Java files</a><br>
