--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-3.htm
@@ -24,7 +24,7 @@
     the <b>hide&nbsp;<span></span>.*files</b> checkbox. This hides files that 
     have only a file extension but no file name, such as&nbsp;<span class=filename>.classpath</span>. 
   <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1025" height=27 width=159> 
-  <p><a href="tasks-2.htm">Showing and hiding files</a> <br>
+  <p><a href="tasks-2.htm">Showing and hiding elements</a> <br>
     <a href="tasks-47.htm">Filtering elements</a> 
   <p><img SRC="../images/ngrelr.gif" ALT="Related reference" BORDER=0 id="_x0000_i1026" height=27 width=159> 
   <p class="para"><a href="../reference/ref-view-package-explorer.htm">Package Explorer</a> 
