--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-4.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-4.htm
@@ -18,7 +18,9 @@
     class files</b>&nbsp;filter is selected.</p>
   <p class=para><img width=159 height=27 id="_x0000_i1025"
 src="../images/ngrelt.gif" alt="Related tasks" border=0></p>
-  <p class=para><a href="tasks-2.htm">Showing and hiding files</a></p>
+  <p class=para><a href="tasks-2.htm">Showing and hiding elements</a><br>
+      <a href="tasks-47.htm">Filtering elements</a> 
+  </p>
   <p class=para><img border=0 width=159 height=27 id="_x0000_i1026"
 src="../images/ngrelr.gif" alt="Related reference"></p>
   <p class=para><a href="../reference/ref-view-package-explorer.htm">Package Explorer</a></p>
